node-docker-servic.yml
apiVersion: v1
kind: Service
metadata:
  name: node-docker-app-svc
spec:
  selector:
    app: node-docker
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3015
      targetPort: 3015
