service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-deployment-svc
spec:
  selector:
    env: demo
    type: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
